--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
     >
         <main class="bg-white p-16 rounded-lg">
             <h1 class="text-3xl font-bold mb-8">
-                Masukkan Harga Saham Close (5 hari yang lalu):
+                Masukkan Harga Saham Close:
             </h1>
 
             <form
@@ -34,7 +34,7 @@
                 method="post"
                 class="flex flex-col"
             >
-                <label for="Close" class="mb-2">Close</label>
+                <label for="Close" class="mb-2">Close (<i>Data histori close 5 hari yang lalu</i>)</label>
                 <input
                     type="text"
                     name="Close"
