--- a/templates/index.html
+++ b/templates/index.html
@@ -34,9 +34,9 @@
                 method="post"
                 class="flex flex-col"
             >
-                <label for="Close" class="mb-2">Close (<i>Data histori close 5 hari yang lalu</i>)</label>
+                <label for="Close" class="mb-2">Close (<i>Data close 5 hari yang lalu</i>)</label>
                 <input
-                    type="text"
+                    type="number"
                     name="Close"
                     placeholder="Close"
                     required="required"
