--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
             >
                 <label for="Close" class="mb-2">Close (<i>Data close 5 hari yang lalu</i>)</label>
                 <input
-                    type="number"
+                    type="text"
                     name="Close"
                     placeholder="Close"
                     required="required"
