--- a/templates/index.html
+++ b/templates/index.html
@@ -88,12 +88,12 @@
             <div class="flex justify-around bg-white p-16 rounded-lg mt-8">
                 <img
                     class="h-24 md:h-28"
-                    src="https://digitalent.kominfo.go.id/assets/@images/logo.png"
+                    src="http://dikti.go.id/microcredential-ai/assets/1.png"
                     alt="logo-dts"
                 />
                 <img
                     class="h-24 md:h-28"
-                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Logo_of_Ministry_of_Communication_and_Information_Technology_of_the_Republic_of_Indonesia.svg/604px-Logo_of_Ministry_of_Communication_and_Information_Technology_of_the_Republic_of_Indonesia.svg.png"
+                    src="http://dikti.go.id/microcredential-ai/assets/kampus-merdeka.png"
                     alt="logo-kominfo"
                 />
             </div>
