--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@
                 <h1 class="text-2xl mb-8">
                     Prediksi Saham Sekarang adalah
                 </h1>
-                <h2 class="text-5xl font-bold">Rp {{ predict_close }}</h2>
+                <h2 class="text-5xl font-bold">Rp { predict_close }</h2>
             </div>
             <div class="flex justify-around bg-white p-16 rounded-lg mt-8">
                 <img
